--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ a {
   position: relative;
   background-color: black;
   background-image: radial-gradient(circle at center, #222, #222 30%, black 31%);
+  background-attachment: local;
   transition: all 64ms ease-in-out;
   background-position: -10px -256px;
   background-size: 170%;
@@ -127,6 +128,10 @@ a {
   /* transform: translateY(40px) rotateX(-90deg); */
   transform: none;
   opacity: 1
+}
+#answer.bubbling {
+  transform: scale(.75);
+  opacity: 0!important;
 }
 #answerText {
   position: absolute;
