--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
   margin:0;
   font-family: sans-serif;
@@ -5,6 +10,7 @@ body {
   flex-flow: column;
   overflow: hidden;
   touch-action: none;
+  padding-top: 21vh;
 }
 section {
   position: absolute;
@@ -34,6 +40,7 @@ hr {
   transition: all .6s ease-in-out;
 }
 label[for="info-checkbox"] {
+  display: block;
   position: fixed;
   z-index: 20;
   top: 5%;
@@ -74,6 +81,7 @@ a {
 .eightball {
   width: 300px;
   height: 300px;
+  margin: 1rem auto;
   position: relative;
   background-color: black;
   background-image: radial-gradient(circle at center, #222, #222 30%, black 31%);
@@ -148,6 +156,8 @@ a {
   display: none;
   position: fixed;
   bottom: 1rem;
+  left: 1rem;
+  right: 1rem;
   background-color: #eee;
   border-radius: 1rem;
   padding: 1rem;
